--- a/apps/desktop/src/styles/workspace.css
+++ b/apps/desktop/src/styles/workspace.css
@@ -33,13 +33,31 @@
   grid-row: 1;
 }
 
-#grid {
+#grid-split {
   grid-column: 2;
   grid-row: 1;
   min-width: 0;
   min-height: 0;
   position: relative;
   z-index: 0;
+  display: grid;
+  grid-template-columns: 1fr 0px 0px;
+  grid-template-rows: 1fr;
+}
+
+#grid {
+  min-width: 0;
+  min-height: 0;
+  position: relative;
+}
+
+#grid-secondary {
+  min-width: 0;
+  min-height: 0;
+}
+
+#grid-splitter {
+  background: var(--border);
 }
 
 #dock-right {
